--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,9 @@ def repos = [
         'sensors/health/sensorhub-driver-angelsensor',
         'processing/sensorhub-process-vecmath',
         'processing/sensorhub-process-geoloc'
+    ],
+    'osh-oakridge-modules': [
+        'sensors/sensorhub-driver-kromek-d3s'
     ]
 ]
 
