--- a/sensorhub-android-app/build.gradle
+++ b/sensorhub-android-app/build.gradle
@@ -49,6 +49,8 @@ android {
     exclude 'META-INF/LICENSE'
     exclude '**/empty'
     exclude 'META-INF/rxjava.properties'
+    exclude 'META-INF/LICENSE.md'
+    exclude 'META-INF/NOTICE.md'
   }
 
   sourceSets {
@@ -63,8 +65,15 @@ android {
   lintOptions {
     abortOnError false
   }
-    buildFeatures {
+
+  buildFeatures {
         viewBinding true
+  }
+
+  configurations {
+    configureEach {
+      exclude group: 'com.sun.activation', module: 'jakarta.activation'
     }
+  }
 }
 
