[WIP] add very basic implementation of BLE client

--- a/sensorhub-android-ste/build.gradle
+++ b/sensorhub-android-ste/build.gradle
@@ -5,4 +5,5 @@ ext.details = 'Driver for STE Radiation Pager'
 
 dependencies {
     api project(':sensorhub-core')
+    implementation "com.android.support:appcompat-v7:28.0.0"
 }
