--- a/sensorhub-android-ste/build.gradle
+++ b/sensorhub-android-ste/build.gradle
@@ -6,4 +6,9 @@ ext.details = 'Driver for STE Radiation Pager'
 dependencies {
     api project(':sensorhub-core')
     implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation project(':sensorhub-android-service')
+}
+
+android {
+    compileSdk = 28
 }
