--- a/sensorhub-android-ste/src/main/AndroidManifest.xml
+++ b/sensorhub-android-ste/src/main/AndroidManifest.xml
@@ -2,5 +2,7 @@
     package="org.sensorhub.impl.sensor.ste">
 
     <uses-sdk android:minSdkVersion="28" android:targetSdkVersion="33" />
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 </manifest>
