--- a/sensorhub-android-ste/build.gradle
+++ b/sensorhub-android-ste/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     api project(':sensorhub-core')
     implementation "com.android.support:appcompat-v7:28.0.0"
     implementation project(':sensorhub-android-service')
+    implementation project(':sensorhub-driver-android')
 }
 
 android {
