Add Kromek D5 driver

--- a/sensorhub-android-app/build.gradle
+++ b/sensorhub-android-app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation project(path: ':sensorhub-datastore-h2')
     implementation project(path: ':sensorhub-service-sweapi')
     implementation project(':sensorhub-android-ste')
+    implementation project(path: ':sensorhub-android-kromek-d5')
 }
 
 android {
