--- a/sensorhub-android-kromek-d5/src/main/AndroidManifest.xml
+++ b/sensorhub-android-kromek-d5/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
         android:minSdkVersion="28"
         android:targetSdkVersion="33" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 </manifest>
