--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = submodules/osh-addons
 	url = https://github.com/opensensorhub/osh-addons.git
 	branch = v2
+[submodule "submodules/osh-oakridge-modules"]
+	path = submodules/osh-oakridge-modules
+	url = git@github.com:Botts-Innovative-Research/osh-oakridge-modules.git
