--- a/sensorhub-android-polar/AndroidManifest.xml
+++ b/sensorhub-android-polar/AndroidManifest.xml
@@ -1,20 +1,43 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="org.sensorhub.impl.sensor.polar"
-    android:versionCode="1"
-    android:versionName="1.0">
+    package="org.sensorhub.impl.sensor.polar">
+
+    <uses-permission android:name="android.permission.BODY_SENSORS" />
+
+    <!-- Polar SDK needs Bluetooth scan permission to search for BLE devices. Polar BLE SDK doesn't use the scan
+ to decide the location so "neverForLocation" permission flag can be used.-->
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_SCAN"
+        android:usesPermissionFlags="neverForLocation"
+        tools:targetApi="s" />
+
+    <!-- Polar SDK needs Bluetooth connect permission to connect for found BLE devices.-->
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
     <!-- Allows Polar SDK to connect to paired bluetooth devices. Legacy Bluetooth permission,
      which is needed on devices with API 30 (Android Q) or older. -->
-    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission
+        android:name="android.permission.BLUETOOTH"
+        android:maxSdkVersion="30" />
 
     <!-- Allows Polar SDK to discover and pair bluetooth devices. Legacy Bluetooth permission,
      which is needed on devices with API 30 (Android Q) or older. -->
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_ADMIN"
+        android:maxSdkVersion="30" />
+
+    <!-- Polar SDK needs the fine location permission to get results for Bluetooth scan. Request
+    fine location permission on devices with API 30 (Android Q). Note, if your application
+    needs location for other purposes than bluetooth then remove android:maxSdkVersion="30"-->
+    <uses-permission
+        android:name="android.permission.ACCESS_FINE_LOCATION"
+        android:maxSdkVersion="30" />
 
     <!-- The coarse location permission is needed, if fine location permission is requested. Request
-     coarse location permission on devices with API 30 (Android Q). -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+      coarse location permission on devices with API 30 (Android Q). Note, if your application
+     needs location for other purposes than bluetooth then remove android:maxSdkVersion="30" -->
+    <uses-permission
+        android:name="android.permission.ACCESS_COARSE_LOCATION"
+        android:maxSdkVersion="30" />
 
 </manifest>
