--- a/settings.gradle
+++ b/settings.gradle
@@ -29,10 +29,11 @@ def repos = [
         'sensors/health/sensorhub-driver-angelsensor',
         'processing/sensorhub-process-vecmath',
         'processing/sensorhub-process-geoloc'
-    ]
-        'osh-oakridge-modules':[
-                'sensors/sensorhub-driver-rs350'
-        ]
+    ],
+      'osh-oakridge-modules':[
+          'sensors/sensorhub-driver-rs350',
+          'sensors/sensorhub-utils-rad'
+      ]
 ]
 
 repos.each { repoName, modules ->
