--- a/sensorhub-android-app/build.gradle
+++ b/sensorhub-android-app/build.gradle
@@ -14,12 +14,12 @@ dependencies {
 
   implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
   implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
-  implementation 'com.android.support:appcompat-v7:28.0.0'
-  implementation 'com.android.support:design:28.0.0'
-  implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-  implementation 'android.arch.navigation:navigation-fragment:1.0.0'
-  implementation 'android.arch.navigation:navigation-ui:1.0.0'
-  implementation 'com.android.support:support-v4:28.0.0'
+  implementation 'androidx.appcompat:appcompat:1.0.0'
+  implementation 'com.google.android.material:material:1.0.0'
+  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+  implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
+  implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 //  implementation project(path: ':sensorhub-storage-compat')
 //  implementation project(path: ':sensorhub-android-sos-ipc')
   implementation project(':sensorhub-datastore-h2')
