--- a/sensorhub-android-wear-os/build.gradle
+++ b/sensorhub-android-wear-os/build.gradle
@@ -5,7 +5,7 @@ ext.details = 'Driver for Wear OS'
 
 dependencies {
     api project(':sensorhub-core')
-    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation project(':sensorhub-android-service')
     implementation project(':sensorhub-driver-android')
 }
