--- a/sensorhub-android-app/AndroidManifest.xml
+++ b/sensorhub-android-app/AndroidManifest.xml
@@ -14,16 +14,16 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <uses-feature android:name="android.hardware.camera2.full" />
 
@@ -37,7 +37,7 @@
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"
+            android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -51,11 +51,9 @@
         <activity
             android:name=".AppStatusActivity"
             android:label="App Status"
-            android:theme="@style/Theme.AppCompat.DayNight"/>
-        <!-- <activity android:name=".spotreport.SpotReportActivity" -->
-        <!-- android:configChanges="orientation|screenSize"> -->
+            android:theme="@style/Theme.AppCompat.DayNight" />
 
-    <service
+        <service
             android:name=".SensorHubService"
             android:enabled="true" />
     </application>
