--- a/sensorhub-android-wearos-watch/build.gradle
+++ b/sensorhub-android-wearos-watch/build.gradle
@@ -28,5 +28,7 @@ android {
 
 dependencies {
     implementation 'com.google.android.gms:play-services-wearable:18.1.0'
-    implementation "androidx.health:health-services-client:1.1.0-alpha02"
+    implementation 'androidx.wear:wear:1.3.0'
+    implementation 'androidx.health:health-services-client:1.1.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
