--- a/sensorhub-android-wearos-watch/build.gradle
+++ b/sensorhub-android-wearos-watch/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation 'androidx.wear:wear:1.3.0'
     implementation 'androidx.health:health-services-client:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.google.guava:guava:30.1-jre'
 }
