--- a/sensorhub-android-wearos-watch/src/main/AndroidManifest.xml
+++ b/sensorhub-android-wearos-watch/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.BODY_SENSORS" />
     <uses-permission android:name="android.permission.BODY_SENSORS_BACKGROUND" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:icon="@mipmap/ic_launcher"
