--- a/sensorhub-android-wearos-watch/build.gradle
+++ b/sensorhub-android-wearos-watch/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.guava:guava:30.1-jre'
+    implementation project(':sensorhub-android-wearos-lib')
 }
