--- a/sensorhub-android-wearos-watch/src/main/AndroidManifest.xml
+++ b/sensorhub-android-wearos-watch/src/main/AndroidManifest.xml
@@ -6,12 +6,18 @@
     <uses-permission android:name="android.permission.BODY_SENSORS" />
     <uses-permission android:name="android.permission.BODY_SENSORS_BACKGROUND" />
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_HEALTH" />
 
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
+        <meta-data
+            android:name="com.google.android.wearable.standalone"
+            android:value="true" />
         <activity
             android:name="org.sensorhub.impl.sensor.wearos.watch.MainActivity"
             android:exported="true"
@@ -22,5 +28,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name="org.sensorhub.impl.sensor.wearos.watch.StartupReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <service
+            android:name="org.sensorhub.impl.sensor.wearos.watch.HealthDataService"
+            android:exported="false"
+            android:foregroundServiceType="health" />
     </application>
 </manifest>
