--- a/sensorhub-android-wearos-phone/src/main/AndroidManifest.xml
+++ b/sensorhub-android-wearos-phone/src/main/AndroidManifest.xml
@@ -1,1 +1,6 @@
-<manifest package="org.sensorhub.impl.sensor.wearos" />
+<manifest package="org.sensorhub.impl.sensor.wearos"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+</manifest>
