--- a/sensorhub-android-wearos-lib/build.gradle
+++ b/sensorhub-android-wearos-lib/build.gradle
@@ -16,4 +16,5 @@ android {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'androidx.annotation:annotation:1.7.1'
 }
