--- a/sensorhub-android-wearos-watch/src/main/AndroidManifest.xml
+++ b/sensorhub-android-wearos-watch/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <meta-data
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
         <activity
             android:name="org.sensorhub.impl.sensor.wearos.watch.MainActivity"
             android:exported="true"
