--- a/sensorhub-driver-SleepMonitor/build.gradle
+++ b/sensorhub-driver-SleepMonitor/build.gradle
@@ -11,6 +11,16 @@ dependencies {
   api project(':sensorhub-driver-videocam')
   api project(':sensorhub-process-vecmath')
   api project(':sensorhub-android-service')
+
+
+
+  implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
+  implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+  implementation 'androidx.appcompat:appcompat:1.6.1'
+  implementation project(path: ':sensorhub-driver-android')
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+  implementation 'androidx.core:core:1.5.0'
+
 }
 
 android {
