--- a/sensorhub-android-app/build.gradle
+++ b/sensorhub-android-app/build.gradle
@@ -4,28 +4,44 @@ description = 'OSH Demo Android App'
 ext.details = 'OSH demo app for Android'
 
 repositories {
-//  maven {
-//    url "https://repo.eclipse.org/content/repositories/paho-releases/"
-//  }
 }
 
 dependencies {
   api project(':sensorhub-android-lib')
+
+
+//  implementation 'androidx.appcompat:appcompat:1.7.0'
+//  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+//  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
 
   implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
   implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
   implementation 'com.android.support:appcompat-v7:28.0.0'
   implementation 'com.android.support:design:28.0.0'
   implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+
   implementation 'android.arch.navigation:navigation-fragment:1.0.0'
   implementation 'android.arch.navigation:navigation-ui:1.0.0'
   implementation 'com.android.support:support-v4:28.0.0'
   implementation project(path: ':sensorhub-datastore-h2')
   implementation project(path: ':sensorhub-service-sweapi')
 
-  implementation project(path: ':sensorhub-android-controller')
-  implementation project(path: ':sensorhub-driver-SleepMonitor')
 
+  implementation project(path: ':sensorhub-driver-oximeter')
+  implementation project(path: ':sensorhub-android-controller')
+
+
+  //duplicate class handler
+  constraints {
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+      because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+    }
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+      because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+    }
+
+  }
 }
 
 android {
