--- a/sensorhub-android-app/AndroidManifest.xml
+++ b/sensorhub-android-app/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-feature android:name="android.hardware.location" />
     <uses-feature android:name="android.hardware.sensor.compass" />
-    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
     <uses-feature
         android:name="android.hardware.usb.accessory"
         android:required="true" />
@@ -26,7 +26,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
-    <uses-feature android:name="android.hardware.camera2.full" />
+    <uses-feature android:name="android.hardware.camera2.full" android:required="true"/>
+
 
     <application
         android:allowBackup="true"
