--- a/sensorhub-android-app/build.gradle
+++ b/sensorhub-android-app/build.gradle
@@ -3,30 +3,23 @@ apply plugin: 'com.android.application'
 description = 'OSH Demo Android App'
 ext.details = 'OSH demo app for Android'
 
-repositories {
-//  maven {
-//    url "https://repo.eclipse.org/content/repositories/paho-releases/"
-//  }
-}
-
 dependencies {
     api project(':sensorhub-android-lib')
 
-//  implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-//  implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui:1.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-//  implementation project(path: ':sensorhub-storage-compat')
-//    implementation project(path: ':sensorhub-android-sos-ipc')
-    implementation project(path: ':sensorhub-datastore-h2')
-    implementation project(path: ':sensorhub-service-sweapi')
-    implementation project(':sensorhub-android-ste')
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-wearable:18.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation project(':sensorhub-datastore-h2')
+    implementation project(':sensorhub-service-sweapi')
+//    implementation project(':sensorhub-android-ste')
+
+//    QR code dependencies
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.google.zxing:core:3.4.1'
+
 }
 
 android {
@@ -34,6 +27,7 @@ android {
     buildToolsVersion rootProject.buildToolsVersion
 
     defaultConfig {
+        applicationId "org.opensensorhub.android"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
@@ -67,4 +61,3 @@ android {
         viewBinding true
     }
 }
-
