--- a/sensorhub-android-obd2/src/main/AndroidManifest.xml
+++ b/sensorhub-android-obd2/src/main/AndroidManifest.xml
@@ -4,5 +4,6 @@
     <uses-sdk android:minSdkVersion="28" android:targetSdkVersion="33" />
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 </manifest>
