--- a/sensorhub-android-obd2/build.gradle
+++ b/sensorhub-android-obd2/build.gradle
@@ -6,6 +6,8 @@ ext.details = 'Driver for OBD2 sensors'
 dependencies {
     api project(':sensorhub-core')
     implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation 'com.github.pires:obd-java-api:1.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
     implementation project(':sensorhub-android-service')
     implementation project(':sensorhub-driver-android')
 }
